# python-cwip

./: README.md  cwip.py  pyproject.toml
tests/integration/: test_arg_parsing.py
tests/integration/pasterunners/: test_waylandpasterunner.py
